[package]
name = "radix-yew-book-primitives"
description = "Book examples for Radix Primitives Yew."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
radix-yew-aspect-ratio = { path = "../../../packages/primitives/yew/aspect-ratio", optional = true }
radix-yew-avatar = { path = "../../../packages/primitives/yew/avatar", optional = true }
radix-yew-checkbox = { path = "../../../packages/primitives/yew/checkbox", optional = true }
radix-yew-icons = { path = "../../../packages/icons/yew", optional = true }
radix-yew-label = { path = "../../../packages/primitives/yew/label", optional = true }
radix-yew-select = { path = "../../../packages/primitives/yew/select", optional = true }
radix-yew-separator = { path = "../../../packages/primitives/yew/separator", optional = true }
radix-yew-switch = { path = "../../../packages/primitives/yew/switch", optional = true }
radix-yew-tooltip = { path = "../../../packages/primitives/yew/tooltip", optional = true }
yew = { workspace = true, features = ["csr"] }

[features]
default = [
    "aspect-ratio",
    "avatar",
    "checkbox",
    "label",
    "select",
    "separator",
    "switch",
    "tooltip",
]
aspect-ratio = ["dep:radix-yew-aspect-ratio"]
avatar = ["dep:radix-yew-avatar"]
checkbox = ["dep:radix-yew-checkbox", "dep:radix-yew-icons"]
label = ["dep:radix-yew-label"]
select = ["dep:radix-yew-select", "dep:radix-yew-icons"]
separator = ["dep:radix-yew-separator"]
switch = ["dep:radix-yew-switch"]
tooltip = ["dep:radix-yew-tooltip", "dep:radix-yew-icons"]
