[package]
name = "radix-yew-book-themes"
description = "Book examples for Radix Themes Yew."
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
log.workspace = true
radix-yew-icons = { path = "../../../packages/icons/yew" }
radix-yew-themes = { path = "../../../packages/themes/yew" }
yew = { workspace = true, features = ["csr"] }
yew-router.workspace = true
yew-style.workspace = true

[features]
default = [
    "aspect-ratio",
    "avatar",
    "badge",
    "blockquote",
    "box",
    "button",
    "callout",
    "checkbox",
    "code",
    "container",
    "em",
    "flex",
    "grid",
    "heading",
    "icon-button",
    "kbd",
    "link",
    "quote",
    "section",
    "select",
    "separator",
    "spinner",
    "strong",
    "switch",
    "text",
    "text-area",
    "text-field",
    "tooltip",
]
aspect-ratio = []
avatar = []
badge = []
blockquote = []
box = []
button = ["radix-yew-icons/bookmark"]
callout = [
    "radix-yew-icons/exclamation-triangle",
    "radix-yew-icons/info-circled",
]
code = []
container = []
checkbox = []
em = []
flex = []
grid = []
heading = []
icon-button = ["radix-yew-icons/magnifying-glass"]
kbd = []
link = []
quote = []
section = []
select = []
separator = []
spinner = ["radix-yew-icons/bookmark"]
strong = []
switch = []
text = []
text-area = []
text-field = [
    "radix-yew-icons/dots-horizontal",
    "radix-yew-icons/magnifying-glass",
]
tooltip = ["radix-yew-icons/plus"]
